Write page for caesar

--- a/app/templates/caesar.html
+++ b/app/templates/caesar.html
@@ -1,10 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Caesar</title>
-</head>
-<body>
+    <head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <meta charset="UTF-8">
+        <title>Caesar</title>
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>Caesar Cipher</h1>
+                </div>
+            </div>
 
-</body>
+            <div class="row">
+                <div class="col-md-6">
+                    <br>
+                    <legend>Plaintext</legend>
+                    <textarea id="plaintext" class="form-control"></textarea><br>
+                    <button class="btn btn-primary" id="analyze_plaintext">Analyze Plaintext</button><br><br>
+                    <button class="btn btn-primary" id="encrypt">Encrypt</button> using backshift <input name="backshift" value="" type="text" />
+                </div>
+
+                <div class="col-md-6">
+                    <br>
+                    <legend>Histogram Plaintext</legend>
+                    <div id="chart_plaintext"></div>
+                </div>
+            </div>
+
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row">
+                <div class="col-md-6">
+                    <legend>Ciphertext</legend>
+                    <textarea id="ciphertext" class="form-control"></textarea><br>
+                    <button class="btn btn-primary" id="analyze_ciphertext">Analyze Ciphertext</button><br><br>
+                    <button class="btn btn-primary" id="decrypt">decrypt</button> using backshift <input name="backshift" value="" type="text" />
+                </div>
+            </div>
+            <div class="row">
+                <br>
+                <legend>Histogram Ciphertext</legend>
+                <div id="chart_ciphertext"></div>
+
+
+            </div>
+        </div>
+
+    <script>
+        document.getElementById("analyze_plaintext").addEventListener("click", function (ev) {
+            e.preventDefault();
+            e.stopPropagation();
+
+            var text = document.getElementById("plaintext").value;
+            var histogram = createHistogramValues(text);
+
+            document.getElementById("chart_plaintext").innerHTML = createHTMLTable(histogram);
+        });
+
+      document.getElementById("encrypt").addEventListener("click", function (ev) {
+            e.preventDefault();
+            e.stopPropagation();
+
+            var text = document.getElementById("ciphertext").value;
+            var histogram = createHistogramValues(text);
+
+            document.getElementById("chart_ciphertext").innerHTML = createHTMLTable(histogram);
+        });
+
+        function createHistogramValues(text) {
+            var histogram_prepare = [];
+
+            for (var i = 0, len= text.length; i < len; i++)
+            {
+                var letter = text[i];
+                if(letter.match(/[a-z]/i))
+                {
+                    a = a[1];
+                    b = b[1];
+                }
+            }
+
+            histogram = histogram_prepare.sort(function (a, b) {
+                a = a[1];
+                b = b[1];
+
+                return a < b ? -1 : (a > b ? 1 : 0);
+            });
+
+            return histogram;
+        }
+
+        function createHTMLTable(histogram) {
+            var html = "<table>";
+            for (var key in histogram) {
+                html += "<tr>";
+                html += "<td>" + key + ": </td> <td>&nbsp;</td>";
+                html += "<td>" + histogram[key] + "</td>"
+            }
+
+            html += "</table>";
+            return html;
+        }
+
+        function createAlphabeticalShift(text, shift) {
+            shift = parseInt(shift);
+
+            // Make an output variable
+            var output = '';
+
+            // Go through each character
+            for (var i = 0; i < text.length; i++)
+            {
+                // Get the character we'll be appending
+                var c = text[i];
+                var tempchar = "";
+
+                // If it's a letter...
+                if (c.match(/[a-z]/i))
+                {
+                    // Get its code
+                    var code = text.charCodeAt(i);
+
+                    // Uppercase letters
+                    if((code >= 65) && (code <= 90))
+                        tempchar = String.fromCharCode(((code - 65 + shift) % 26) + 65)
+
+                    else if ((code >= 97) && (code <= 122))
+                        tempchar = String.fromCharCode(((code - 97 + shift) % 26) + 97);
+                }
+
+                // Append
+                output += tempchar
+            }
+
+            return output;
+        }
+
+
+    </script>
+    </body>
 </html>
